# posix-app

./: CMakeLists.txt  arm-gcc-toolchain.cmake  build.sh  copyapp_to_fs  readme.md
libraries/: CMakeLists.txt
libraries/c-thread-pool/: CMakeLists.txt
libraries/file-handling/: CMakeLists.txt  file.c  file.h
read-app/: CMakeLists.txt  app.c
